<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_app_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/my_font2"
        android:text="@string/_2048"
        android:textColor="@color/text_color2048"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/image_score"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_score"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@id/image_score_high"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/my_font2"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="#9C27B0"
            app:layout_constraintBottom_toBottomOf="@id/image_score"
            app:layout_constraintEnd_toEndOf="@id/image_score"
            app:layout_constraintStart_toStartOf="@id/image_score"
            app:layout_constraintTop_toTopOf="@id/image_score" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1.2"
            android:fontFamily="@font/my_font2"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color2048"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/image_score"
            app:layout_constraintEnd_toEndOf="@id/image_score"
            app:layout_constraintStart_toStartOf="@id/image_score"
            app:layout_constraintTop_toTopOf="@id/image_score" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_score_high"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_score"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/my_font2"
            android:gravity="center"
            android:text="@string/high_score"
            android:textColor="#9C27B0"
            app:layout_constraintBottom_toBottomOf="@id/image_score_high"
            app:layout_constraintEnd_toEndOf="@id/image_score_high"
            app:layout_constraintStart_toStartOf="@id/image_score_high"
            app:layout_constraintTop_toTopOf="@id/image_score_high" />

        <TextView
            android:id="@+id/score_high_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1.2"
            android:fontFamily="@font/my_font2"
            android:gravity="center_horizontal|top"
            android:text="0"
            android:textColor="@color/text_color2048"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/image_score_high"
            app:layout_constraintEnd_toEndOf="@id/image_score_high"
            app:layout_constraintStart_toStartOf="@id/image_score_high"
            app:layout_constraintTop_toTopOf="@id/image_score_high" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_score"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButtonStl"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_appcompat_button"
        android:padding="8dp"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <ImageView
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_appcompat_button"
        android:elevation="150dp"
        android:padding="8dp"
        android:src="@drawable/ic_restart"
        app:layout_constraintEnd_toEndOf="@+id/image_score_high"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:tint="#fff" />

    <ImageView
        android:id="@+id/goBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_appcompat_button"
        android:padding="12dp"
        android:src="@drawable/ic_go_back"
        app:layout_constraintBottom_toBottomOf="@+id/restart"
        app:layout_constraintEnd_toStartOf="@+id/restart"
        app:layout_constraintTop_toTopOf="@+id/restart"
        app:tint="#fff" />

    <ImageView
        android:id="@+id/restart_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="#fff"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mainView"
        app:layout_constraintEnd_toEndOf="@id/mainView"
        app:layout_constraintStart_toStartOf="@id/mainView"
        app:layout_constraintTop_toTopOf="@id/mainView" />

    <FrameLayout
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/my_font2"
            android:text="@string/game_over"
            android:textColor="#000"
            android:textSize="50sp" />
    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameRestart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80CFBFBF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="@id/gameRestart"
            app:layout_constraintTop_toTopOf="@id/gameRestart"
            app:layout_constraintVertical_bias="0.7"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/my_font2"
                android:gravity="center"
                android:text="@string/restart"
                android:textColor="#000"
                android:textSize="48sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/my_font2"
                    android:gravity="end"
                    android:text="@string/yes"
                    android:textColor="#000"
                    android:textSize="36sp"
                    tools:ignore="NestedWeights" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/my_font2"
                    android:gravity="start"
                    android:text="@string/no"
                    android:textColor="#000"
                    android:textSize="36sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>